# musicbox

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
config/: asgi.py  urls.py
config/settings/: base.py
config/settings/auth/: __init__.py  google.py  spotify.py
core/: admin.py  consumers.py  forms.py  mixins.py  models.py  routing.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_room_users.py  0003_alter_room_users.py  0004_invite.py
core/templates/core/: base.html  room_detail.html  room_invite.html  room_list.html  ws_test.html
templates/account/: base.html
users/: models.py
users/migrations/: 0001_initial.py
