[tool.poetry]
name = "musicparty"
version = "0.1.0"
description = "collaborative music casting"
authors = ["Jefwillems <jefwillems100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
django-allauth = "^0.45.0"
channels = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
